# modernrpc_demo

./: .dockerignore  .editorconfig  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  app.json  fly.toml  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  render.yaml  requirements.txt  rollup.config.mjs
core/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
main/: rpc_methods.py  urls.py  views.py
main/rpc/: errors.py  http.py  math.py  meta.py  server.py
main/templates/main/: _all-procedures-doc.html  _copy-button.html  _single-procedure-doc.html  doc_accordion_method.html  doc_accordion_method_list.html  home.html  method_doc_content.html  methods_doc.html  protocol_pills.html
main/templatetags/: rpc.py
main_app/: __init__.py  rpc_methods.py  urls.py  views.py
main_app/static/: bootstrap.min.css
main_app/templates/main_app/: doc_accordion_method.html  doc_accordion_method_list.html  home.html
modernrpc_demo/: settings.py  urls.py  wsgi.py
theme/static/js/: tailwind.js
theme/static_src/: package-lock.json  package.json  tailwind.config.js
www/: index.css  index.js  init.js
